--- a/Session_1_Intro.Rmd
+++ b/Session_1_Intro.Rmd
@@ -7,6 +7,7 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 ```{r klippy, echo=FALSE, include=TRUE}
+library(klippy)
 klippy::klippy('')
 ```
 ## Session 1
@@ -72,7 +73,7 @@ print("Hello, world!")
 
 Now type $#$ and write anything you like after this:
 
-```{r}
+```{r, class.source='klippy'}
 # test script
 ```
 
@@ -92,7 +93,7 @@ We will *not* cover **shortcuts** any more, but you will learn them as you code 
 
 The **c()** function is used to create a *vector* of values. For example,
 
-```{r}
+```{r, class.source='klippy'}
 c(1, 2, 3)
 ```
 
@@ -100,25 +101,25 @@ creates a vector containing the values 1, 2, and 3.
 
 The **length()** function is used to determine the length of a vector or the number of elements in an object. For example,
 
-```{r}
+```{r, class.source='klippy'}
 length(c(1, 2, 3))
 ```
 
 returns the number 3 because there are three numbers. As does:
 
-```{r}
+```{r, class.source='klippy'}
 length(c(3, 3, 3))
 ```
 
 because there are three numbers that happen to be 3. Similarly, so does:
 
-```{r}
+```{r, class.source='klippy'}
 length(c(300, 30, 3))
 ```
 
 The **sum()** function is used to calculate the sum of a vector or a set of numbers. For example, 
 
-```{r}
+```{r, class.source='klippy'}
 sum(c(1, 2, 3))
 ```
 
@@ -126,14 +127,14 @@ will return 6.
 
 The **mean()** function is used to calculate the mean or average of a vector or a set of numbers. For example, 
 
-```{r}
+```{r, class.source='klippy'}
 mean(c(1, 2, 3))
 ```
 will return 2.
 
 Note that some functions like **mean()** need certain conditions to be true before they can work. Let's take a closer look at this example:
 
-```{r}
+```{r, class.source='klippy'}
 n1 <- c(1,2,3,4,5)
 n2 <- c(1,2,3,4,NA)
 mean(n1)
@@ -142,7 +143,7 @@ mean(n2)
 
 The vector we made called *n2* includes an **NA**, which means *Not Available*, and so the function **mean()** cannot calculate the mean when a number in does not exist. We can easily resolve that here because mean() has a **logical** condition that we will learn more about later, but here it is **na.rm = FALSE**. We include that and get a different answer:
 
-```{r}
+```{r, class.source='klippy'}
 n2 <- c(1,2,3,4,NA)
 mean(n2, na.rm = TRUE)
 ```
@@ -151,7 +152,7 @@ This is the mean of the four numbers.
 
 The **sd()** function is used to calculate the standard deviation of a vector or a set of numbers. For example, 
 
-```{r}
+```{r, class.source='klippy'}
 sd(c(1, 2, 3, 4))
 ```
 
@@ -159,24 +160,24 @@ will return 1.290994.
 
 The **var()** function is used to calculate the variance of a vector or a set of numbers. For example, 
 
-```{r}
+```{r, class.source='klippy'}
 var(c(1, 2, 3, 4))
 ```
 
 will return 1.666667.
 
 The **seq()** function is used to create a sequence of numbers. For example, 
-```{r}
+```{r, class.source='klippy'}
 seq(1, 5, by = 1)
 ```
 will create a vector containing the numbers 1, 2, 3, 4, and 5. Try:
 
-```{r}
+```{r, class.source='klippy'}
 seq(1, 100, by = 10)
 ```
 And the **rep()** function is used to repeat a value or a set of values a specified number of times. For example, 
 
-```{r}
+```{r, class.source='klippy'}
 rep(1, times = 3)
 ```
 
@@ -184,7 +185,7 @@ will create a vector containing the values 1, 1, and 1.
 
 The **plot()** function is used to create a plot of data. For example, 
 
-```{r}
+```{r, class.source='klippy'}
 plot(c(1, 2, 3, 4), c(4, 5, 6, 7))
 ```
 
@@ -192,26 +193,26 @@ will create a scatter plot of the points (1, 4), (2, 5), (3, 6) and (4, 7) with 
 
 R comes with some built in data sets as well as functions. We can use another function, **summary()** to see what is in one data set called *cars*:
 
-```{r cars}
+```{r, class.source='klippy'}
 summary(cars)
 ```
 
 And we can use this *base* **plot()** function again to plot some of the data, for example:
 
-```{r pressure}
+```{r, class.source='klippy'}
 plot(pressure)
 ```
 
 This plot looks slightly better than our first attempt with the six numbers above, but we can make this plot look better. Here's an example of how:
 
-```{r}
+```{r, class.source='klippy'}
 plot(c(1, 2, 3, 4), c(4, 5, 6, 7), col = "blue", lwd = 5,
      main = "Main title", xlab = "Number set 1", ylab = "Number set 2")
 ```
 
 Last, in this introduction session, we will **simulate** some data and plot it in **ggplot** to show you how where this workshop tutorial is heading:
 
-```{r}
+```{r, class.source='klippy'}
 # Simulate data
 set.seed(123) # Set seed for reproducibility
 data <- rnorm(1000, mean = 50, sd = 10)
@@ -231,13 +232,13 @@ Do not worry about the **ggplot()** text for now, we will have a session on this
 
 Basic help can be found in several ways within R though. This includes typing the function name in the **search** box in the **help** tab in **RStudio** or using the R help functions **help()** or simply *?*. For example,
 
-```{r}
+```{r, class.source='klippy'}
 # help(lm)
 ```
 
 takes you to a server or try:
 
-```{r}
+```{r, class.source='klippy'}
 #?lm
 ```
 
@@ -251,7 +252,7 @@ R packages allow users to perform a wide range of specialized tasks in R, from d
 
 Packages in R are typically installed using the **install.packages()** function, and loaded into the R session using the **library()** function. For example,
 
-```{r}
+```{r, class.source='klippy'}
 # Check if ggplot2 is already installed
 if(!require(ggplot2)){install.packages("ggplot2")}
 
@@ -273,7 +274,7 @@ And *type* the package name.
 
 Once a package is loaded, its functions and data sets can be accessed using the package name followed by the function or data set name, separated by a period. For example:
 
-```{r}
+```{r, class.source='klippy'}
 ggplot2::ggplot()
 ```
 
@@ -287,7 +288,7 @@ R has several **data types** that are used to store and manipulate data. What fo
 
 **Numeric** data represent real numbers and are used to store continuous numerical data, such as measurements or counts. For example,
 
-```{r}
+```{r, class.source='klippy'}
 # Simulate data
 set.seed(123) # Set seed for reproducibility
 data <- rnorm(5, mean = 10, sd = 2)
@@ -303,7 +304,7 @@ You can modify the parameters of **rnorm()** to generate different types of data
 
 **Integer** data represent *whole numbers* and are used to store discrete numerical data, such as counts or indices. For example,
 
-```{r}
+```{r, class.source='klippy'}
 # Simulate data
 set.seed(123) # Set seed for reproducibility
 data <- sample(1:10, 5, replace = TRUE)
@@ -318,7 +319,7 @@ You can modify the parameters of **sample()** to generate different types of dat
 
 **Character** data types in R represent *strings* of **text** and are used to store categorical or textual data. For example,
 
-```{r}
+```{r, class.source='klippy'}
 # Simulate data
 data <- c("red", "blue", "green", "yellow", "orange")
 
@@ -335,7 +336,7 @@ You can have a string of any words or numbers written as words as long as they a
 
 **Logical** data types in R represent *Boolean* values (i.e. only two values) and are used to store binary data, such as **true/false** values or logical conditions. For example,
 
-```{r}
+```{r, class.source='klippy'}
 # Define logical variables
 var1 <- TRUE
 var2 <- FALSE
@@ -366,7 +367,7 @@ The **xor()** function checks if either *var1* or *var2* is **TRUE**, *but not b
 
 Next, we will try a different way of looking at this:
 
-```{r}
+```{r, class.source='klippy'}
 # Define logical variables
 var1 <- TRUE
 var2 <- FALSE
@@ -403,7 +404,7 @@ R treats capital (or *upper case*) letters differently to *lower case*, so **A**
 
 Also, you can also assign things using the **=** sign instead of the *assignment operator* **<-**. I tend not to do this because $==$ means something else and can be mistaken for $=$. So lets do one exercise to test this:
 
-```{r}
+```{r, class.source='klippy'}
 a <- 1 # assign the number 1 to a
 A <- 2 # assign the number 2 to A
 print(a)
@@ -418,7 +419,7 @@ A==a
 
 This can sometimes cause some confusion, so let's try with another example of logical conditions:
 
-```{r}
+```{r, class.source='klippy'}
 # Define variables
 var1 <- 10
 var2 <- 5
@@ -442,7 +443,7 @@ In this script, two *variables* *var1* and *var2* are defined with the values 10
 
 Note that we can check the type of data these variables are by using the **class()** function.
 
-```{r}
+```{r, class.source='klippy'}
 class(var1)
 class(var2)
 ```
@@ -451,7 +452,7 @@ class(var2)
 
 **Factor** data types in R represent categorical data with a fixed set of **levels**. Factors are often used to represent categorical variables in statistical analyses. For example:
 
-```{r}
+```{r, class.source='klippy'}
 # Define a factor variable
 var1 <- factor(c("A", "B", "A", "C", "B", "B", "C", "C", "A"))
 
@@ -469,7 +470,7 @@ In this script, a **factor** variable *var1* is defined with 9 values representi
 
 The two variables are then combined into a **data frame** called *df* using the **data.frame()** function. We will discuss data frames below. Note we can plot this data set using:
 
-```{r}
+```{r, class.source='klippy'}
 plot(df)
 ```
 
@@ -479,7 +480,7 @@ Depending on the data and the data structure, the default **plot()** function wi
 
 R has built-in data types for storing and manipulating **dates** and **times**. These data types are useful for time series analysis and data visualization. Let's create some data to begin with using this code:
 
-```{r}
+```{r, class.source='klippy'}
 # Create a date sequence for the month of May 2023
 dates <- seq(as.Date("2023-05-01"), as.Date("2023-05-31"), by = "day")
 
@@ -502,7 +503,7 @@ Note that **lubridate** is a nice way to deal with times and dates in the **tidy
 
 We can plot time and date data too. Here's an example of some code, simulating data from a different time period for practice and to show you another data series and here we will plot it with **ggplot()**:
 
-```{r}
+```{r, class.source='klippy'}
 # Generate some time data
 time <- seq(as.POSIXct("2022-01-01 00:00:00"), as.POSIXct("2022-01-02 23:59:59"), by = "15 min")
 value <- rnorm(length(time), mean = 50, sd = 10)
@@ -523,7 +524,7 @@ The script then loads the **ggplot2** **library** and creates a plot of the data
 
 **Lists** in R are used to store complex or structured data, such as nested data frames or ''heterogeneous'' data sets.
 
-```{r}
+```{r, class.source='klippy'}
 # Create a list
 my_list <- list(
   name = "Bat 1",
@@ -552,7 +553,7 @@ names(my_list)
 ```
 Lists can be very useful but they are also not the most intuitive objects to work with. Let's take one look at the structure of the list using the **str()** function and use two ways to find the `Bat 1' character:
 
-```{r}
+```{r, class.source='klippy'}
 str(my_list)
 
 # method one
@@ -567,7 +568,7 @@ We will discuss these approaches to indexing more in the next section on arrays 
 
 **Arrays** and **matrices** in R are used to store data in two or more dimensions. These data types are often used in mathematical and statistical analyses.
 
-```{r}
+```{r, class.source='klippy'}
 # Create a matrix
 my_matrix <- matrix(1:9, nrow = 3, ncol = 3)
 print(my_matrix)
@@ -598,7 +599,7 @@ The script demonstrates how to access elements of the array using indexing like 
 
 Lastly, **Data frames** in R are used to store tabular data with rows and columns, *similar to a spreadsheet*. Data frames are a fundamental data structure in R and are widely used in data analysis and statistical modeling. We have seen several examples of them before. Let's look at one of R's in-built data frames, called 'cars'.
 
-```{r}
+```{r, class.source='klippy'}
 summary(cars)
 head(cars)
 dim(cars)
