--- a/Session_2_tidyverse.Rmd
+++ b/Session_2_tidyverse.Rmd
@@ -6,6 +6,10 @@ output: github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+```{r klippy, echo=FALSE, include=TRUE}
+library(klippy)
+klippy::klippy('')
+```
 
 ## Session 2
 
