--- a/Session_3_Intro_import.Rmd
+++ b/Session_3_Intro_import.Rmd
@@ -6,6 +6,13 @@ output: github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+```{r klippy, echo=FALSE, include=TRUE}
+library(klippy)
+klippy::klippy('')
+```
 
 ## Session 3
 
