--- a/Session_8_SpaceTime_Trees.Rmd
+++ b/Session_8_SpaceTime_Trees.Rmd
@@ -6,6 +6,11 @@ output: github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+```{r klippy, echo=FALSE, include=TRUE}
+library(klippy)
+klippy::klippy('')
+```
+
 
 ## Session 8 Space and time
 
