--- a/Session_3_Intro_import.Rmd
+++ b/Session_3_Intro_import.Rmd
@@ -30,7 +30,7 @@ When you *download* a *GitHub repository*, like course we are using now, the fil
 
 For example, in this repository we have a folder named *data* and it contains a *.csv* file named **TableS1_raw_clinical_data.csv**. You can set the **working directory** to the **data** folder using the relative path **./data** using the **setwd()** function like this:
 
-```{r}
+```{r, class.source='klippy'}
 # Set the working directory to the data folder in the downloaded repository
 setwd("./data")
 
@@ -47,7 +47,7 @@ The **setwd()** function sets the working directory to the *data* folder in the 
 
 For example, here's an example R script that imports a .csv file named *example_data.csv* from a folder named *data_folder* and converts it into a dataframe with headers. **Note that this will not work without editing.** Also, we are using the **#** symbol here to *comment* out the text so that it does not run. 
 
-```{r}
+```{r, class.source='klippy'}
 # Set the path to the data folder
 #data_path <- "~/path/to/data_folder"
 
@@ -74,7 +74,7 @@ This is the type of data we will be collecting during this project, except that 
 
 Let's look at the data, using two alternative ways:
 
-```{r}
+```{r, class.source='klippy'}
 str(example_data)
 
 library(dplyr) # load the dplyr package
@@ -89,7 +89,7 @@ To change the data type of a column in a newly imported data frame using tidyver
 
 Here's an example of how to change the data type of the *Sex* column to a *factor* and check it using the **glimpse()** function:
 
-```{r}
+```{r, class.source='klippy'}
 library(dplyr)
 example_data <- mutate(example_data, Sex = as.factor(Sex))
 glimpse(example_data)
@@ -101,7 +101,7 @@ To change a column name in a data frame using tidyverse, you can use the **renam
 
 Here's an example of how to use **rename()** to change the name of a column named *X.Patient* to just *Patient* in the *example_data*:
 
-```{r}
+```{r, class.source='klippy'}
 library(dplyr)
 example_data <- rename(example_data, Patient = X.Patient)
 glimpse(example_data)
@@ -111,7 +111,7 @@ The *X.* was added by R to fill a space the is carried over from the original Ex
 
 Note that you can also use **rename()** to change multiple column names at once, by specifying multiple arguments in the format below.
 
-```{r}
+```{r, class.source='klippy'}
 library(dplyr)
 example_data <- example_data %>%
   rename_with(~ "new_name1", "IgA_S") %>%
@@ -122,7 +122,7 @@ glimpse(example_data)
 
 Let's switch them back because the original names were more useful:
 
-```{r}
+```{r, class.source='klippy'}
 library(dplyr)
 example_data <- example_data %>%
   rename_with(~ "IgA_S", "new_name1") %>%
@@ -133,7 +133,7 @@ glimpse(example_data)
 
 Now let's now change another single column that we actually want to change:
 
-```{r}
+```{r, class.source='klippy'}
 example_data <- rename(example_data, Cohort = X.Cohort)
 ```
 
@@ -141,7 +141,7 @@ Note we could have done that all in one go!
 
 The names are now tidy, but we still have several columns in the wrong *type*. Let's start to change them. To change the data types of several columns using **mutate()** in R, you can use the **mutate_at()** or **mutate_if()** functions from the **dplyr** package.
 
-```{r}
+```{r, class.source='klippy'}
 library(dplyr)
 # Convert columns "Cohort", "Result.Beckman", and "Result.Roche" to factor data type
 example_data <- example_data %>%
@@ -154,37 +154,37 @@ glimpse(example_data)
 
 There are some columns that should be numbers, but are not. Let's look at one:
 
-```{r}
+```{r, class.source='klippy'}
 print(example_data$Total.Ab.Roche)
 ```
 
 These data are in the wrong format because of the "-" symbols, so R thinks that these should be characters. Let's convert them to numerical values:
 
-```{r}
+```{r, class.source='klippy'}
 example_data <- mutate(example_data, Total.Ab.Roche = as.numeric(Total.Ab.Roche))
 ```
 
 Note that you get a **warning**, but this is fine. This is warning us that there are **NA**s. These are fine and telling us that we have missing data (the - in the above).
 
-```{r}
+```{r, class.source='klippy'}
 print(example_data$Total.Ab.Roche)
 ```
 Let's look at the format of what is left:
 
-```{r}
+```{r, class.source='klippy'}
 glimpse(example_data)
 ```
 
 Let's change the last things we want to be numeric values:
 
-```{r}
+```{r, class.source='klippy'}
 example_data <- example_data %>%
   mutate_at(vars("Time.from.symptoms.to.blood.sample", "IgG.Beckman"), as.numeric)
 ```
 
 Now we are just left with the dates. Dates can be tricky, but let's use the **mutate_at()**. To convert character columns to date format using **mutate_at()** where the character is in the *"dd/mm/yyyy"* format, you can use the **as.Date()** function with the appropriate date format string. For example:
 
-```{r}
+```{r, class.source='klippy'}
 library(dplyr)
 example_data <- example_data %>%
   mutate_at(vars("Date.of.birth","Date.of.symptoms","Date.of.PCR.test","Date.of.blood.sample"), ~ as.Date(., format = "%d/%m/%Y"))
@@ -202,7 +202,7 @@ Personally, I think plotting data is extremely helpful. It tells us so much and 
 
 Let's start by plotting one of the antibody titres by date, just to start:
 
-```{r}
+```{r, class.source='klippy'}
 library(ggplot2)
 ggplot(example_data, aes(x = Date.of.symptoms, y = IgG_S)) +
   geom_line()
@@ -212,7 +212,7 @@ The data of the symptoms may not be useful. Plus, because these data are from di
 
 Now let's plot something slightly more meaningful, the time from the symptoms a patient reported to a blood sample with the titre, and use a better plot method for these data:
 
-```{r}
+```{r, class.source='klippy'}
 library(ggplot2)
 ggplot(example_data, aes(x = Time.from.symptoms.to.blood.sample, y = IgG_S)) +
   geom_point()
@@ -222,7 +222,7 @@ Do these results make sense to you?
 
 Now what about age? Let's plot the antibody data by age.
 
-```{r}
+```{r, class.source='klippy'}
 library(ggplot2)
 ggplot(example_data, aes(x = Age, y = IgG_S)) +
   geom_point()
@@ -230,7 +230,7 @@ ggplot(example_data, aes(x = Age, y = IgG_S)) +
 
 And what do the titres look like by age and gender (here classified as *Sex*):
 
-```{r}
+```{r, class.source='klippy'}
 library(ggplot2)
 ggplot(example_data, aes(x = Sex, y = IgG_S)) +
   geom_point()
@@ -240,7 +240,7 @@ ggplot(example_data, aes(x = Sex, y = IgG_S)) +
 
 There are better ways of plotting these data that give us more information, so let's try a box plot using the **geom_boxplot()** instead of the **geom_point()** function:
 
-```{r}
+```{r, class.source='klippy'}
 library(ggplot2)
 ggplot(example_data, aes(x = Sex, y = IgG_S)) +
   geom_boxplot()
@@ -248,7 +248,7 @@ ggplot(example_data, aes(x = Sex, y = IgG_S)) +
 
 And now let's look at a violin plot with **geom_violin()**
 
-```{r}
+```{r, class.source='klippy'}
 library(ggplot2)
 ggplot(example_data, aes(x = Sex, y = IgG_S)) +
   geom_violin()
@@ -256,7 +256,7 @@ ggplot(example_data, aes(x = Sex, y = IgG_S)) +
 
 Now we can add some more information and change the looks. We will add more and then break this down:
 
-```{r}
+```{r, class.source='klippy'}
 # Libraries
 library(ggplot2)
 library(dplyr)
@@ -313,7 +313,7 @@ And
 
 Next, let's simplify things a bit more, but make four plots, all with some minor differences to the plots.
 
-```{r}
+```{r, class.source='klippy'}
 library(ggplot2)
 # Basic box plot
 p1 <- ggplot(example_data, aes(x=Sex, y=IgG_S, fill=Sex)) + 
@@ -331,7 +331,7 @@ p4 <- p1 + geom_jitter(shape=16, position=position_jitter(0.1))
 
 We can now plot these together using the **ggarrange()** function from the **ggpubr** package.
 
-```{r}
+```{r, class.source='klippy'}
 library(ggpubr)
 ggarrange(p1, p2, p3, p4, 
           labels = c("A", "B", "C", "D"),
@@ -344,7 +344,7 @@ Spend a bit of time looking at the different plots and the code that made them a
 
 We can change the type of plot to a *histogram* by using the **geom_histogram()** function instead of the **geom_violin()** or **geom_boxplot()** functions above. Let's look:
 
-```{r}
+```{r, class.source='klippy'}
 library(ggplot2)
 ggplot(example_data, aes(x=Total.Ab.Roche)) + 
   geom_histogram(binwidth=1)
@@ -353,7 +353,7 @@ ggplot(example_data, aes(x=Total.Ab.Roche)) +
 
 We can change details like we did above for other plots. For example:
 
-```{r}
+```{r, class.source='klippy'}
 # Draw with black outline, white fill
 ggplot(example_data, aes(x=Total.Ab.Roche)) +
     geom_histogram(binwidth=.5, colour="black", fill="white")
@@ -361,7 +361,7 @@ ggplot(example_data, aes(x=Total.Ab.Roche)) +
 
 Now let's look at a density plot:
 
-```{r}
+```{r, class.source='klippy'}
 # Density curve
 ggplot(example_data, aes(x=Total.Ab.Roche)) + 
   geom_density()
@@ -369,7 +369,7 @@ ggplot(example_data, aes(x=Total.Ab.Roche)) +
 
 And we can overlay these, like we combined the box plot and the violin plots above:
 
-```{r}
+```{r, class.source='klippy'}
 # Histogram overlaid with kernel density curve
 ggplot(example_data, aes(x=Total.Ab.Roche)) + 
     geom_histogram(aes(y=after_stat(density)),   # Histogram with density instead of count on y-axis
@@ -382,13 +382,13 @@ ggplot(example_data, aes(x=Total.Ab.Roche)) +
 
 There are nice ways that we can look at all the data. Let's take a look at all the antibody data. Let's remind ourselves of which and numeric antibody data:
 
-```{r}
+```{r, class.source='klippy'}
 glimpse(example_data)
 ```
 
 Now let's look and the relationships between the different **antibody titre** data. Here where have the different immunoglobulins (*IgG*, *IgM* and *IgA*) against the different SARS-CoV-2 proteins (*S* for *spike*, *E* for *envelope*, and *M* for membrane) and the different test kits (*Beckman* and *Roche*)
 
-```{r}
+```{r, class.source='klippy'}
 #install.packages("GGally")
 library(ggplot2)
 library(GGally)
@@ -422,7 +422,7 @@ graph_corr
 
 That's big plot with a lot of interactions, so let's simplify it further and just look at those are include IgG:
 
-```{r}
+```{r, class.source='klippy'}
 library(ggplot2)
 library(GGally)
 
@@ -445,7 +445,7 @@ This type of plot can be very helpful to look at before plotting specific relati
 
 Let's have a look at how gender (here *Sex*) impacts *IgG* antibodies against the *M* protein using another type of plot, a *ridgeline* plot:
 
-```{r}
+```{r, class.source='klippy'}
 library(ggplot2)
 library(ggridges)
 theme_set(theme_minimal())
@@ -457,7 +457,7 @@ And last for this session, let's plot the different antibodies types (*IgG*, *Ig
 
 First, for *ggplot* we must convert the **wide format** data to **long format** data before plotting it, because to plot these data in ggplot, we need to **reshape** the data so that each row contains a single observation of the variable at a given time point. To do this, we can use the **gather()** function from the **tidyr** package:
 
-```{r}
+```{r, class.source='klippy'}
 library(tidyr)
 # Select columns to keep and gather
 cols_to_keep <- c("Patient", "Time.from.symptoms.to.blood.sample")
@@ -474,7 +474,7 @@ glimpse(long_data)
 
 Let's now make a plot showing all the data:
 
-```{r}
+```{r, class.source='klippy'}
 ggplot(long_data, aes(x=Time.from.symptoms.to.blood.sample)) +  
   theme_bw() +  geom_histogram(binwidth=7, fill="darkblue",color="black") +
   labs(x="Date", y="Counts of samples") + 
@@ -483,7 +483,7 @@ ggplot(long_data, aes(x=Time.from.symptoms.to.blood.sample)) +
 
 Now let's make a plot showing the data by antibody class:
 
-```{r}
+```{r, class.source='klippy'}
 ggplot(long_data, aes(x=Time.from.symptoms.to.blood.sample, group=Antibody, fill=Antibody))+
  stat_bin(colour="black", binwidth=2, alpha=0.5,
  position="stack") + theme_bw()+
@@ -493,7 +493,7 @@ ggplot(long_data, aes(x=Time.from.symptoms.to.blood.sample, group=Antibody, fill
 
 But what we might be interested in is seeing how titres vary with time, so let's plot that:
 
-```{r}
+```{r, class.source='klippy'}
 long_data %>%
   ggplot(aes(x=Time.from.symptoms.to.blood.sample,
              y=Titre,
@@ -506,7 +506,7 @@ That begins to show us some interesting results, but clearly titres cannot be **
 
 One option is to drop the **error**:
 
-```{r}
+```{r, class.source='klippy'}
 long_data %>%
   ggplot(aes(x=Time.from.symptoms.to.blood.sample,
              y=Titre,
@@ -517,7 +517,7 @@ long_data %>%
 
 But we can change the plot more, so lets use a **0.9 confidence** level instead and limit the plot to positive only values:
 
-```{r}
+```{r, class.source='klippy'}
 library(scales)
 long_data %>%
   ggplot(aes(x=Time.from.symptoms.to.blood.sample,
@@ -536,7 +536,7 @@ Last lets **export** the data:
 
 To export our cleaned data set called example_data in R, we can use the **write.csv()** function or one of its variants, depending on the file format we want to export to. Here's an example of how to export *example_data* as a *.csv* file:
 
-```{r}
+```{r, class.source='klippy'}
 write.csv(example_data, file = "data/example_data.csv", row.names = FALSE)
 ```
 
@@ -548,7 +548,7 @@ If we wanted to export the data in a different format, such as a tab-separated f
 
 If the data folder doesn't exist yet, we can create it using the **dir.create()** function before exporting the data:
 
-```{r}
+```{r, class.source='klippy'}
 # Create the data folder if it doesn't exist
 if (!file.exists("data")) {
   dir.create("data")
